--- a/ui/package.json
+++ b/ui/package.json
@@ -10,12 +10,15 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "typescript": "^4.8.2",
     "vite": "^3.0.9",
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
     "pnpm": "^7.17.0",
-    "solid-js": "^1.5.1"
+    "solid-js": "^1.5.1",
+    "uuid": "^9.0.0",
+    "uuidjs": "^4.2.12"
   }
 }
