--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   db:
     image: postgres:14
-    restart: always
+    # restart: always
     environment:
       POSTGRES_USER: ren
       POSTGRES_PASSWORD: passw0rd
@@ -13,7 +13,10 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - ./db:/var/lib/postgresql/data
+      - ./db/postgres:/var/lib/postgresql/data
+      - ./db/logs:/var/log
+
+
   
   api:
     build:
