--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,10 +6,13 @@
 
 	// Update the 'dockerComposeFile' list if you have more compose files or use different names.
 	// The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
-	"remoteUser": "docker",
+	"remoteUser": "root",
 	"dockerComposeFile": [
 		"../docker-compose.yml"
 	],
+	"features": {
+		"golang": "1.18" // <------------------------------- here
+	},
 
 	// The 'service' property is the name of the service for the container that VS Code should
 	// use. Update this value and .devcontainer/docker-compose.yml to the real service name.
