--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -12,11 +12,13 @@ COPY go.sum .
 
 RUN go mod download
 COPY . .
+CMD ["air", "-c", ".air.toml"]
 
-RUN GOOS=linux GOARCH=amd64 go build -o /main
 
-FROM alpine:3.9
+# RUN GOOS=linux GOARCH=amd64 go build -o /main
 
-COPY --from=builder /main .
+# FROM alpine:3.9
 
-ENTRYPOINT ["/main"]
+# COPY --from=builder /main .
+
+# ENTRYPOINT ["/main"]
