--- a/ui/package.json
+++ b/ui/package.json
@@ -16,8 +16,14 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@hope-ui/core": "1.0.0-next.11",
+    "@hope-ui/solid": "^0.6.7",
+    "@solidjs/router": "^0.5.1",
+    "@stitches/core": "^1.2.8",
+    "clsx": "^1.2.1",
     "pnpm": "^7.17.0",
     "solid-js": "^1.5.1",
+    "solid-transition-group": "^0.0.12",
     "uuid": "^9.0.0",
     "uuidjs": "^4.2.12"
   }
