いっぱい追加した

--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,8 @@
     "vite-plugin-solid": "^2.3.0"
   },
   "dependencies": {
+    "@felte/solid": "^1.2.6",
+    "@felte/validator-yup": "^1.0.10",
     "@hope-ui/core": "1.0.0-next.11",
     "@hope-ui/solid": "^0.6.7",
     "@solidjs/router": "^0.5.1",
@@ -25,6 +27,7 @@
     "solid-js": "^1.5.1",
     "solid-transition-group": "^0.0.12",
     "uuid": "^9.0.0",
-    "uuidjs": "^4.2.12"
+    "uuidjs": "^4.2.12",
+    "yup": "^0.32.11"
   }
 }
