--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     volumes:
       - ./db/postgres:/var/lib/postgresql/data
       - ./db/logs:/var/log
+    networks:
+      - my-network
 
   api:
     build:
@@ -27,3 +29,12 @@ services:
       - ./api:/app
     extra_hosts:
       - host.docker.internal:host-gateway
+    depends_on: 
+      - db
+    links: 
+      - db
+    networks:
+      - my-network
+networks:
+  my-network:
+    external: true
