--- a/ui/package.json
+++ b/ui/package.json
@@ -25,7 +25,9 @@
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.5.0",
+    "material-icons": "^1.13.1",
     "pnpm": "^7.17.0",
+    "solid-icons": "^1.0.4",
     "solid-js": "^1.5.1",
     "solid-transition-group": "^0.0.12",
     "uuid": "^9.0.0",
